# shargain

./: .cruft.json  .dockerignore  .flake8  .gitignore  .gitmodules  .local-env  .opencode  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  Dockerfile  Makefile  PRODUCT.md  README.md  compose.yaml  compose.yml  docker-compose.yml  gunicorn.conf.py  justfile  manage.py  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: backend.yml  deploy.yml  deployv2.yml  docker.yml
.impeccable/live/: config.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.windsurf/rules/: base.md  memory_bank_instructions.md
_bmad-output/implementation-artifacts/: 1-1-api-contract-finalization.md  1-11-webhook-notification-channel.md  1-12-google-social-login.md  1-13-ux-ui-accessibility-fixes.md  sprint-status.yaml
_bmad-output/implementation-artifacts/epics/: epic-1-mvp-public-launch.md
_bmad-output/planning-artifacts/: bmm-workflow-status.yaml
_bmad-output/planning-artifacts/architecture/: components.md  core-workflows.md  deployment-architecture.md  development-workflow.md  error-handling-strategy.md  external-apis.md  index.md  next-steps.md  security-and-performance.md  tech-stack.md  testing-strategy.md
_bmad-output/planning-artifacts/brainstorm/: token_strategy_brainstorm.md
_bmad-output/planning-artifacts/prd/: 3-user-interface-enhancement-goals.md  5-epic-and-story-structure.md  6-epic-mvp-public-launch.md
_bmad-output/planning-artifacts/product-brief/: project-brief.md
_bmad-output/planning-artifacts/project-documentation/: project-architecture.md
agent-os/specs/2026-02-16-1830-subscription-plans/: plan.md
agent-os/specs/2026-02-16-dashboard-header-ux/: plan.md  references.md  shape.md  standards.md
deployment/: .env  docker-compose.yml  hosts  setup-local-db.yml
deployment/ansible-play-shargain/: .cruft.json  LICENSE  README.md  ansible.cfg  inventory.txt  shargain.yml
deployment/ansible-play-shargain/group_vars/: all.yml  prod.yml  secrets.yml  stage.yml
deployment/ansible-play-shargain/roles/: requirements.yml
deployment/dev/: prometheus.yml
deployment/docker/: .env.prod  compose.yml  monitoring.yml
deployment/group_vars/: all.yml
docs/: architecture.md  prd.md
docs/architecture/: api-specification.md  backend-architecture.md  checklist-results-report.md  coding-standards.md  data-models-and-apis.md  data-models.md  database-schema.md  development-and-deployment.md  frontend-architecture.md  high-level-architecture.md  index.md  introduction.md  monitoring-and-observability.md  quick-reference-key-files-and-entry-points.md  shargain-fullstack-architecture-document.md  source-tree-and-module-organization.md  source-tree.md  testing-reality.md  unified-project-structure.md
docs/memory_bank/: activeContext.md  memory_bank_instructions.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
docs/prd/: 1-intro-project-analysis-and-context.md  2-requirements.md  4-technical-constraints-and-integration-requirements.md  6-epic-mvp-public-launch.md  index.md
docs/stories/: story-1.10-frontend-usage-tier-display.md  story-1.9-user-subscription-tiers.md
frontend/: .cta.json  AGENTS.md  Dockerfile  eslint.config.js  index.html  nginx.conf  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/.serena/: project.yml
frontend/.serena/memories/: code_style.md  commands.md  project_purpose.md  project_structure.md  tech_stack.md
frontend/public/: manifest.json  site.webmanifest
frontend/src/: App.tsx  hey-api-config.ts  index.tsx  interceptor-setup.ts  main.tsx  routeTree.gen.ts  styles.css  tanstack-router.d.ts
frontend/src/components/: Footer.tsx  Header.tsx  LanguageSwitcher.tsx  app-header.tsx  landing-page.tsx
frontend/src/context/: auth.tsx
frontend/src/hooks/: useCsrfToken.ts
frontend/src/i18n/: resources.ts
frontend/src/lib/: auth.ts  csrf.ts  google-maps-url.test.ts  google-maps-url.ts  i18n.ts  utils.ts
frontend/src/routes/: __root.tsx  auth.tsx  dashboard.tsx  dashboard2.tsx  index.tsx  notifications.tsx  prototype.dashboard.tsx  prototype.dropdown.tsx
frontend/src/test/: setup.ts
frontend/src/types/: dashboard.ts  i18next.d.ts
frontend/types/: dashboard.ts
openspec/: config.yaml
openspec/changes/improving-the-observability/: design.md  tasks.md
openspec/changes/refactor-backend-source-plugins/: design.md  proposal.md  tasks.md
openspec/changes/scraping-target-list/: design.md  proposal.md  tasks.md
openspec/specs/distributed-tracing/: spec.md
openspec/specs/metrics-endpoint/: spec.md
requirements/: base.in  base.txt  deployment.in  deployment.txt  dev.in  dev.txt  prod.txt
shargain/: asgi.py  celery.py  urls.py  wsgi.py
shargain/accounts/: admin.py  models.py  serializers.py  urls.py
shargain/notifications/: admin.py  models.py  senders.py  serializers.py  services.py  urls.py  views.py
shargain/offers/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py  websites.py  widgets.py
shargain/parsers/: olx.py
shargain/public_api/: api.py  auth.py
shargain/quotas/: admin.py  apps.py  models.py  querysets.py  signals.py
shargain/settings/: base.py  local.py  production.py  tests.py
shargain/subscriptions/: admin.py  apps.py  dto.py  models.py  querysets.py  signals.py
shargain/telegram/: __init__.py  add_link_flow.py  admin.py  apps.py  bot.py  detect_list_url.py  models.py
(+258 files in other folders)
