[tool.black]
max-line-length = 120
[project]
name = "shargain"
version = "0.0.1"
dependencies = [
    "django",
    "django-dbbackup",
    "djangorestframework",
    "drf-yasg",
    "django-jazzmin",
    "django-extensions",
    "django-debug-toolbar",
    "django-admin-display",
    "django-click",
    "celery",
    "psycopg2-binary",
    "requests",
    "bs4",
    "ipython",
    "environs",
    "pytelegrambotapi",
    "discord",
    "django-filter",
    "django-cors-headers",
    "django-better-admin-arrayfield",
    "gunicorn",
    "sentry-sdk",
]


[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "pytest-sugar",
    "pytest-xdist",
    "flake8",
    "flake8-formatter-abspath",
    "black",
    "isort",
    "mypy",
    "django-stubs",
    "types-requests",
]
deployment = [
    "ansible>=10.7.0",
    "mitogen>=0.3.23",
]

[tool.uv]
package = false

[tool.isort]
profile = "black"

[tool.coverage.report]
branch = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]
omit = [
    "**/fixtures.py",
    "manage.py",
    "**/wsgi.py",
    "**/settings/*.py",
    "**/migrations/*.py",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "shargain.settings.local"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = ["deployment*",
                 ".git/*",
                 ".mypy_cache/*",
                 ".pytest_cache/*",
                 "migrations/*",
                 "shargain/frontend/*"
]
addopts = "--nomigrations"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, flake8, black, isort, mypy
skipsdist = True

[gh-actions]
python =
    3.10: py310

[testenv:flake8]
basepython = python
deps = flake8
commands = flake8 --format=default shargain

[testenv:black]
deps = black
commands = black --check shargain

[testenv:isort]
deps = isort
commands = isort --check shargain

[testenv:mypy]
deps = -r requirements/dev.txt
commands = mypy shargain

[testenv]
setenv = PYTHONPATH = {toxinidir}
deps = -r requirements/dev.txt
commands = pytest shargain
"""
